--- a/SpookyPeggle/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/SpookyPeggle/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HalloweenFont.ttf">
+            <string>HalloweenToo</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -15,12 +20,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3s3-ei-wZH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="home-page" translatesAutoresizingMaskIntoConstraints="NO" id="3s3-ei-wZH">
                                 <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SpookyPeggle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0R-Tk-H0e">
+                                <rect key="frame" x="200" y="486" width="434" height="108"/>
+                                <fontDescription key="fontDescription" name="HalloweenToo" family="Halloween Too" pointSize="65"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="d0R-Tk-H0e" secondAttribute="bottom" constant="580" id="1HH-0f-5te"/>
+                            <constraint firstItem="d0R-Tk-H0e" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="486" id="Egd-8Y-XLO"/>
+                            <constraint firstItem="d0R-Tk-H0e" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="200" id="Szq-ni-0Lf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d0R-Tk-H0e" secondAttribute="trailing" constant="200" id="hnH-wS-TC1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -29,4 +46,7 @@
             <point key="canvasLocation" x="52.517985611510795" y="374.8743718592965"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="home-page" width="2000" height="2000"/>
+    </resources>
 </document>
